# redner

./: Cargo.toml
docs/: GEMINI_URL_BUG_REPORT.md
migrations/: 20260718133211_create_runtime_jobs.sql
sql/migrations/: 0001_create_projects.sql  0002_create_assets.sql  0003_create_project_timelines.sql
src/: main.rs
src/ai/: handlers.rs  mod.rs  models.rs  router.rs
src/api/: health.rs  mod.rs  projects.rs  timelines.rs
src/app/: router.rs  state.rs
src/db/: pool.rs
src/dto/: mod.rs  project_dto.rs  timeline_dto.rs
src/error/: app_error.rs
src/models/: asset.rs  mod.rs  project.rs  timeline.rs
src/performance/: api.rs  mod.rs  profile.rs
src/repos/: asset_repo.rs  mod.rs  project_repo.rs  timeline_repo.rs
src/runtime/: demo.rs  mod.rs
src/runtime/context/: execution_context.rs  mod.rs
src/runtime/executor/: dispatcher.rs  mod.rs  runner.rs
src/runtime/graph/: graph.rs  node.rs
src/runtime/jobs/: mock.rs  mod.rs  models.rs  store.rs  voice.rs
src/runtime/providers/: elevenlabs.rs  mod.rs  voice.rs
src/runtime/registry/: mod.rs
src/services/: mod.rs  project_service.rs  timeline_service.rs
